# pyheatdemand

./: .readthedocs.yaml  CITATION.cff  CITATION.md  CONTRIBUTING.md  DevelopersGuide.md  README.md  environment.yml  environment_dev.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml  question.md
.github/workflows/: draft-pdf.yml  greetings.yml  pypi_release.yml  workflow.yml
docs/source/: about.rst  conf.py  contributing.rst  heatdemand.rst  index.rst  installation.rst  modules.rst  pyhd.rst  pyheatdemand.rst
docs/source/notebooks/: 01_Interreg_NWE_Mask_10km.ipynb  02_Processing_Data_Type_I_Raster.ipynb  03_Processing_Data_Type_I_Vector.ipynb  04_Processing_Data_Type_II_Vector_Polygons.ipynb  05_Processing_Data_Type_II_Vector_Lines.ipynb  06_Processing_Data_Type_III_Point_Coordinates.ipynb  07_Processing_Data_Type_III_Point_Data_Addresses.ipynb  08_Processing_Data_Type_IV_Vector_Polygons.ipynb  (+6 more)
joss/: paper.bib  paper.md
notebooks/: 03_Processing_Data_Type_I_Vector.ipynb  04_Processing_Data_Type_II_Vector_Polygons.ipynb  05_Processing_Data_Type_II_Vector_Lines.ipynb  07_Processing_Data_Type_III_Point_Data_Addresses.ipynb  08_Processing_Data_Type_IV_Vector_Polygons.ipynb  12_Processing_Results.ipynb
pyhd/: __init__.py  processing.py
pyheatdemand/: __init__.py  processing.py
test/: test_processing.py
test/data/: Aachen_Buildings.dbf  Aachen_Buildings.shp  Aachen_Buildings.shx  Aachen_Street.dbf  Aachen_Streets.dbf  Aachen_Streets.shp  Aachen_Streets.shx  Bevoelkerungszahl.tif  Building_Polygons_Aachen.dbf  Building_Polygons_Aachen.shp  Building_Polygons_Aachen.shx  Data_Type_I.tif  Data_Type_III_Building_Footprints.dbf  Data_Type_III_Building_Footprints.shp  Data_Type_III_Building_Footprints.shx  Data_Type_III_Point_Addresses.csv  Data_Type_III_Point_Addresses.dbf  Data_Type_III_Point_Addresses.shp  Data_Type_III_Point_Addresses.shx  Data_Type_III_Point_Addresses.tif  Data_Type_III_Point_Administrative_Areas.dbf  Data_Type_III_Point_Administrative_Areas.shp  Data_Type_III_Point_Administrative_Areas.shx  Data_Type_III_Point_Administrative_Areas_Communities.dbf  Data_Type_III_Point_Administrative_Areas_Communities.shp  Data_Type_III_Point_Administrative_Areas_Communities.shx  Data_Type_III_Point_Administrative_Areas_Hotmaps.dbf  Data_Type_III_Point_Administrative_Areas_Hotmaps.shp  Data_Type_III_Point_Administrative_Areas_Hotmaps.shx  Data_Type_III_Points_Coordinates.tif  Data_Type_III_Polygons_Administrative_Areas.dbf  Data_Type_III_Polygons_Administrative_Areas.shx  Data_Type_III_Polygons_Administrative_Areas.tif  Data_Type_II_Vector.tif  Data_Type_II_Vector_Lines.dbf  Data_Type_II_Vector_Lines.shp  Data_Type_II_Vector_Lines.shx  Data_Type_II_Vector_Lines.tif  Data_Type_II_Vector_cropped.dbf  Data_Type_II_Vector_cropped.shx  (+35 more)
(+2 files in other folders)
